--- a/details.html
+++ b/details.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Major Guidance Solutions is a training and web-consulting company.  We build websites, custom solutions, and training courses" />
         <title>Major Guidance Solutions - Sample Website for Training Courses</title>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="https://maxcdn.bootstrapdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
         <!--<link href="css/bootstrap.min.css" rel="stylesheet"/>-->
         <!--<link href="css/bootstrap-theme.min.css" rel="stylesheet"/>-->
-        <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/yeti/bootstrap.min.css" rel="stylesheet" />
+        <link href="https://maxcdn.bootstrpcdn.com/bootswatch/3.3.7/yeti/bootstrap.min.css" rel="stylesheet" />
         <link href="css/site.css" rel="stylesheet"/>
     </head>
     <body>
@@ -20,7 +20,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="http://www.majorguidancesolutions.com" class="navbar-brand">
+                    <a href="http://www.majorguidancesos.com" class="navbar-brand">
                         <img src="http://lorempixel.com/150/30/" title="Your company Logo" alt="A company Logo" height="30px"/>
                     </a>
                 </div>
@@ -35,7 +35,7 @@
                         </li>
                         <li><a href="Portfolio.html">Portfolio</a></li>
                         <li><a href="About.html">About</a></li>
-                        <li><a href="ContactUs.html">Contact Us</a></li>
+                        
                     </ul>
                 </div>
             </div>
@@ -53,14 +53,14 @@
             <h2> I'm developer two, creating a conflict with my critical code change!</h2>
             <hr />
             <footer>
-                <p>&copy; 2017 - <a href="http://www.majorguidancesolutions.com">Major Guidance Solutions</a></p>
+                <p>&copy; 2017 - <a href="http://www.majorguidanesolutions.com">Major Guidance Solutions</a></p>
             </footer>
         </div>
 
         <!-- Scripts -->
         <!--<script src="js/lib/jquery-3.2.1.min.js" type="text/javascript"></script>-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://ajax.googleaps.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <!--<script src="js/lib/bootstrap.min.js" type="text/javascript"></script>-->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrpcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
 </html>
