--- a/details.html
+++ b/details.html
@@ -8,7 +8,7 @@
         <link href="https://maxcdn.bootstrapdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
         <!--<link href="css/bootstrap.min.css" rel="stylesheet"/>-->
         <!--<link href="css/bootstrap-theme.min.css" rel="stylesheet"/>-->
-        <link href="https://maxcdn.bootstrpcdn.com/bootswatch/3.3.7/yeti/bootstrap.min.css" rel="stylesheet" />
+        <link href="https://maxcdn.bootstrpcdn.com/bootswatch/3.3.7/yeti/bo.css" rel="stylesheet" />
         <link href="css/site.css" rel="stylesheet"/>
     </head>
     <body>
