--- a/About.html
+++ b/About.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Major Guidance Solutions is a training and web-consulting company.  We build websites, custom solutions, and training courses" />
+        <meta name="description" content="Major Guidance Solutions is, and training courses" />
         <title>Major Guidance Solutions - Sample Website for Training Courses</title>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="https://maxcdn.boo.min.css" rel="stylesheet" />
         <!--<link href="css/bootstrap.min.css" rel="stylesheet"/>-->
         <!--<link href="css/bootstrap-theme.min.css" rel="stylesheet"/>-->
-        <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/yeti/bootstrap.min.css" rel="stylesheet" />
+        <link href="https://3.3.7/yeti/bootstrap.min.css" rel="stylesheet" />
         <link href="css/site.css" rel="stylesheet"/>
     </head>
     <body>
@@ -33,9 +33,7 @@
                                 <li class="menu-item"><a href="details.html">Another Page</a></li>
                             </ul>
                         </li>
-                        <li><a href="Portfolio.html">Portfolio</a></li>
-                        <li><a href="About.html">About</a></li>
-                        <li><a href="ContactUs.html">Contact Us</a></li>
+                        
                     </ul>
                 </div>
             </div>
@@ -46,26 +44,16 @@
                         <div class="about-text">
                             <h1>About Page</h1>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat 
-                                cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                Lorem ipsum dolor sit
                             </p>
                             <p>
                                 Bacon ipsum dolor amet officia pork chop hamburger, esse turkey pariatur do non fatback jowl ball tip boudin aliqua. Minim aliqua dolore 
-                                biltong, ham hock short loin sausage ball tip prosciutto nostrud turkey irure ground round landjaeger. Tenderloin labore dolore kevin sausage 
-                                biltong. Enim salami est pastrami filet mignon. Brisket id sirloin sunt. Shoulder pork belly aliqua magna sunt meatloaf fugiat velit 
-                                kevin commodo esse meatball laboris pig quis. Jerky spare ribs burgdoggen proident.
+                                biltong, ham hock short loin sausage ball tip prosci ribs burgdoggen proident.
                             </p>
                             <p>
                                 Adaptogen aesthetic VHS blog williamsburg, lumbersexual fingerstache cloud bread laboris flannel before they sold out banjo pok pok tbh schlitz. 
                                 Elit anim selfies officia tumblr. Pop-up bitters portland butcher waistcoat blue bottle. Cloud bread flexitarian squid vinyl eiusmod pickled cold-pressed. 
-                                Church-key subway tile XOXO unicorn, microdosing waistcoat YOLO ex truffaut single-origin coffee poutine. Retro culpa heirloom 90's. 
-                                Blog church-key health goth, before they sold out cupidatat farm-to-table tempor coloring book gastropub bitters four dollar toast echo park. 
-                                Kogi freegan do migas quis truffaut church-key sustainable in post-ironic. Sriracha cillum four dollar toast fashion axe man braid etsy 
-                                austin pickled offal. Letterpress sed banh mi hella four dollar toast mustache sustainable af cillum taxidermy sartorial. Neutra hashtag ad 
-                                cillum viral. Heirloom VHS lumbersexual aliqua. Man braid 90's brunch aliqua scenester iPhone blog deep v bespoke listicle drinking vinegar 
-                                intelligentsia. Seitan williamsburg cloud bread chicharrones irure af fam.
+                                Church-key subway tile XOXO unicorn, microdosing waisam.
                             </p>
                         </div>
                     </div>
@@ -83,15 +71,13 @@
             </div>
             <hr />
             <footer>
-                <p>&copy; 2017 - <a href="http://www.majorguidancesolutions.com">Major Guidance Solutions</a></p>
+                <p>&copy; 2017 - <a href="http://wions</a></p>
             </footer>
         </div>
 
         <!-- Scripts -->
-        <!--<script src="js/lib/jquery-3.2.1.min.js" type="text/javascript"></script>-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <!--<script src="js/lib/bootstrap.min.js" type="text/javascript"></script>-->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  
+       
     </body>
     </body>
 </html>
