--- a/details.html
+++ b/details.html
@@ -20,7 +20,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="http://www.majorguidancesos.com" class="navbar-brand">
+                    <a href="http://w" class="navbar-brand">
                         <img src="http://lorempixel.com/150/30/" title="Your company Logo" alt="A company Logo" height="30px"/>
                     </a>
                 </div>
@@ -29,8 +29,7 @@
                         <li class="menu-item dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Our Services</a>
                             <ul class="dropdown-menu">
-                                <li class="menu-item"><a href="index.html">Home</a></li>
-                                <li class="menu-item"><a href="details.html">Another Page</a></li>
+                                
                             </ul>
                         </li>
                         <li><a href="Portfolio.html">Portfolio</a></li>
@@ -53,7 +52,7 @@
             <h2> I'm developer two, creating a conflict with my critical code change!</h2>
             <hr />
             <footer>
-                <p>&copy; 2017 - <a href="http://www.majorguidanesolutions.com">Major Guidance Solutions</a></p>
+                <p>&copy; 2017 - <a href="http://www.m">Major Guidance Solutions</a></p>
             </footer>
         </div>
 
